--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
+@keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
 @-webkit-keyframes fadeInLeft {
     0% {
         opacity: 0;
@@ -9,14 +33,27 @@
     }
 }
 
-@keyframes fadeInLeft {
+/* Internet Explorer */
+@-ms-keyframes fadeInLeft {
     0% {
         opacity: 0;
-        transform: translateX(-20px);
+        -webkit-transform: translateX(-20px);
     }
     100% {
         opacity: 1;
-        transform: translateX(0);
+        -webkit-transform: translateX(0);
+    }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeInLeft {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -32,19 +69,18 @@ body {
 h1 {
     padding-top: 20vh;
     margin-left: 100px;
-    -webkit-animation-duration: 1s;
-    animation-duration: 1s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-    -webkit-animation-name: fadeInLeft;
-    animation-name: fadeInLeft;
+    -webkit-animation: fadeInLeft 1.5s;
+    -moz-animation: fadeInLeft 1.5s;
+    /*-ms-animation: fadeInLeft 1.5s;*/
+    -o-animation: fadeInLeft 1.5s;
+    animation: fadeInLeft 1.5s;
 }
 
 h2 {
     padding-top: 30px;
     margin-left: 100px;
     /*opacity: 0;*/
-    -webkit-animation: fadein 2s;
+    -webkit-animation: fadein 2.5s;
     -moz-animation: fadein 2s;
     /*-ms-animation: fadein 2s;*/
     -o-animation: fadein 2s;
