--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+* {
+    box-sizing: border-box;
+}
+
 @keyframes fadeInLeft {
     0% {
         opacity: 0;
@@ -57,35 +64,20 @@
     }
 }
 
-@font-face {
-    font-family: "futura";
-    src: url("/fonts/Futura Round.ttf") format("truetype");
-}
+/*@font-face {*/
+/*    font-family: "futura";*/
+/*    src: url("/fonts/futura_round.ttf") format("truetype");*/
+/*}*/
+
+
+
 
 body {
-    font-family: futura, Arial, sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
-h1 {
-    padding-top: 20vh;
-    margin-left: 100px;
-    -webkit-animation: fadeInLeft 1.5s;
-    -moz-animation: fadeInLeft 1.5s;
-    /*-ms-animation: fadeInLeft 1.5s;*/
-    -o-animation: fadeInLeft 1.5s;
-    animation: fadeInLeft 1.5s;
-}
 
-h2 {
-    padding-top: 30px;
-    margin-left: 100px;
-    /*opacity: 0;*/
-    -webkit-animation: fadein 2.5s;
-    -moz-animation: fadein 2s;
-    /*-ms-animation: fadein 2s;*/
-    -o-animation: fadein 2s;
-    animation: fadein 2s;
-}
 
 @keyframes fadein {
     0% {
@@ -137,17 +129,250 @@ h2 {
 }
 
 button {
-    bottom: 12vh;
-    right: 5vw;
+    /*bottom: 12vh;*/
+    /*right: 5vw;*/
+    margin-left: 10vw;
+    margin-top: 30px;
     background-color: #6b60ea;
     color: #fff;
     padding: 15px 32px;
     transition-duration: 0.4s;
     cursor: pointer;
-    position: fixed;
+    position: relative;
     font-size: 18px;
+    border-color: #6b60ea;
+    border-radius: 10px;
+    outline: none;
+    z-index: 0;
 }
 
 button:hover {
-    background-color: #6961ba;
+    background-color: #fff;
+    color: #000;
+}
+
+.navbar {
+    background-image: linear-gradient(to right, #f2d770 , #fff);
+    overflow: hidden;
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    top: 0;
+    width: 50vw;
+    z-index: 1;
+}
+
+.navbar ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+}
+
+.navbar a {
+    display: block;
+    padding: 8px 16px;
+    text-decoration: none;
+    color: #000;
+    font-family: "Lato", Arial, sans-serif;
+    font-size: 24px;
+}
+
+.slideshow {
+    /*max-width: 1000px;*/
+    width: 100vw;
+    position: relative;
+    margin: 0 0;
+    left: 0;
+    padding: 0 0;
+}
+
+.main-text, .caption-text {
+    position: relative;
+}
+
+.main-text {
+    padding-top: 20vh;
+    padding-left: 10vw;
+    font-size: 48px;
+    -webkit-animation: fadeInLeft 1.5s;
+    -moz-animation: fadeInLeft 1.5s;
+    /*-ms-animation: fadeInLeft 1.5s;*/
+    -o-animation: fadeInLeft 1.5s;
+    animation: fadeInLeft 1.5s;
+    font-family: "Open Sans", Arial, sans-serif;
+    grid-row: 1 / 1;
+    grid-column: 1 / 1;
+}
+
+.caption-text {
+    font-size: 36px;
+    padding-top: 30px;
+    padding-left: 10vw;
+    /*opacity: 0;*/
+    -webkit-animation: fadein 2.5s;
+    -moz-animation: fadein 2.5s;
+    /*-ms-animation: fadein 2s;*/
+    -o-animation: fadein 2.5s;
+    animation: fadein 2.5s;
+    font-family: "Open Sans", Arial, sans-serif;
+    grid-row: 2 / 2;
+    grid-column: 1 / 1;
+}
+
+.slide {
+    display: none;
+    -webkit-animation: fadein 1.5s;
+    -moz-animation: fadein 1.5s;
+    -o-animation: fadein 1.5s;
+    animation: fadein 1.5s;
+}
+
+.slide-pic {
+    height: 100vh;
+    max-width: 50vw;
+    float: right;
+    z-index: 1;
+    width: auto;
+    grid-row: 1 / 2;
+    grid-column: 2 / 2;
+}
+
+.grid {
+    display: grid !important;
+    /*grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));*/
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 200px 1fr;
+}
+
+@media only screen and (max-width: 600px) {
+    .slide-pic {
+        max-width: none;
+        position: absolute;
+        top: 70vh;
+        width: 100vw;
+        height: auto;
+        z-index: 0;
+        margin-top: 40px;
+    }
+    .caption-text, .main-text {
+        width: 100vw;
+    }
+    .main-text {
+        padding-top: 15vh;
+    }
+    .navbar {
+        background-image: none;
+        background-color: #f2d770;
+        width: 100vw;
+    }
+    .grid {
+        grid-template-rows: 150px 1fr;
+    }
+}
+
+/*
+.main {
+    position: absolute;
+    top: 100vh;
+    width: 100vw;
+    height: fit-content;
+    display: none;
+}
+
+h1, h2 {
+    font-family: futura, Arial, sans-serif;
+}
+
+.main h1 {
+    font-size: 48px;
+    -webkit-animation: fadeInLeft 1.5s;
+    -moz-animation: fadeInLeft 1.5s;
+    -ms-animation: fadeInLeft 1.5s;
+    -o-animation: fadeInLeft 1.5s;
+    animation: fadeInLeft 1.5s;
+    text-align: center;
+    background-color: #f5c716;
+}
+
+.main h2 {
+    font-size: 40px;
+    -webkit-animation: fadeInRight 1.5s;
+    -moz-animation: fadeInRight 1.5s;
+    -ms-animation: fadeInRight 1.5s;
+    -o-animation: fadeInRight 1.5s;
+    animation: fadeInRight 1.5s;
+    text-align: center;
+}
+
+.main p {
+    font-size: 32px;
+    -webkit-animation: fadein 1.5s;
+    -moz-animation: fadein 1.5s;
+    -ms-animation: fadein 1.5s;
+    -o-animation: fadein 1.5s;
+    animation: fadein 2.5s;
+    text-align: center;
+    font-family: "Lato", Arial, sans-serif;
+}
+
+@keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        transform: translateX(+20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+*/
+
+
+/* Firefox < 16 */
+@-moz-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(+20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(+20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(+20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadeInRight {
+    0% {
+        opacity: 0;
+        -webkit-transform: translateX(+20px);
+    }
+    100% {
+        opacity: 1;
+        -webkit-transform: translateX(0);
+    }
 }
